--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,9 @@
 # Uncomment the following lines to enable the Corne RGB Underglow test
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_HUE=191
+CONFIG_ZMK_RGB_UNDERGLOW_SAT=255
+CONFIG_ZMK_RGB_UNDERGLOW_BRT=100
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
