--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,6 +9,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRIGHTNESS=100
 CONFIG_ZMK_RGB_UNDERGLOW_PERMANENT=y
 
 # Uncomment the following line to enable the Corne OLED Display
+CONFIG_ZMK_USB=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
